style/button.css
.button-base {
    padding: 8px 24px;
    background-color: #F9B105;

    border: none;

    border-radius: 8px;
    color: #333;

    cursor: pointer;
    text-decoration: none;
}

.button-base.full-width {
    width: 100%;
}

.button-note {
    display: flex;
    justify-content: center;
    align-items: center;

    background: none;
    border: none;

    font-size: 32px;

    width: 100%;
    height: 100%;

    max-width: 32px;
    max-height: 32px;

    transition: all .3s;
    background-color: #e05050;
    border-radius: 50%;

    cursor: pointer;
    height: fit-content;
}

.button-note:hover {
    background-color: #ab3030;
}

.button-note.add {
    background-color: #9c51d5;
}
.button-note.add:hover {
    background-color: #b783df;
}

.glossario-button {
    display: flex;
    align-items: center;
    gap: 8px;
    font-size: 20px;
    background: none;
    border: none;

    cursor: pointer;
}

.glossario-button .icon {
    background-color: white;
    color: #612E89;
    
    font-size: 16px;
    width: 20px;
    height: 20px;

    display: inline-flex;
    border-radius: 50%;
    flex-direction: column;
    align-items: center;
}

